# nucleof746zg

./: .cproject  .mxproject  .project  README.md  dma_uart.ioc
Core/Inc/: log_debug.h  main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: log_debug.c  main.c  stm32f7xx_it.c
LWIP/App/: lwip.c
Middlewares/Stack/: stack_buf.h
blinky_rust/: Cargo.toml  build.rs  memory.x
blinky_rust/examples/: blinky.rs
blinky_rust/src/: lib.rs  prelude.rs
dma_uart/: .cproject
dma_uart/Core/Inc/: stm32f7xx_hal_conf.h  stm32f7xx_it.h
ethernet_chat/: dma_uart.ioc
ethernet_chat/Core/Inc/: mqtt_example.h
ethernet_chat/Core/Src/: main.c  stm32f7xx_it.c
ethernet_chat/Middlewares/Stack/: stack_buf.c
spi_loopback/: .cproject  .mxproject  .project  spi_loopback.ioc  spi_loopback.launch
spi_loopback/Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
spi_loopback/Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  sysinit.c
