[package]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2018"
keywords = ["arm", "cortex-m", "stm32f7xx", "hal"]
name = "stm32f7xx-hal"
repository = "https://github.com/stm32-rs/stm32f7xx-hal"
version = "0.4.0"

[dependencies]
as-slice = "0.1.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
embedded-time = "0.12.0"
nb = "0.1.2"
rtcc = "0.2"
stm32f7 = "0.11.0"
micromath = "1.0.0"
stm32-fmc = { version = "0.2.0", features = ["sdram"], optional = true }
rand_core = "0.6"
bxcan = ">=0.4,  <0.6"

[dependencies.bare-metal]
version = "0.2.4"
features = ["const-fn"]

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.void]
default-features = false
version = "1.0.2"

[dev-dependencies]
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = "0.5.2"

[features]
device-selected = []
fmc = ["stm32-fmc"]
rt = ["stm32f7/rt"]

stm32f746 = ["stm32f7/stm32f7x6", "device-selected", "fmc"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true